[package]
name = "bevy_sk"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_embedded_assets = "0.12.0"
bevy_mod_openxr.workspace = true
bevy_mod_xr.workspace = true
bevy_xr_utils.workspace = true
bitflags = "2.6.0"

[dev-dependencies]
bevy_panorbit_camera = "0.19.3"

[workspace.dependencies]
bevy = "0.14.2"
bevy_mod_openxr = "0.1.0"
bevy_mod_xr = "0.1.1"
bevy_xr_utils = "0.1.0"

