[package]
name = "bevy_sk"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_mod_openxr.workspace = true
bevy_mod_xr.workspace = true
bevy_xr_utils.workspace = true
bitflags = "2.6.0"

[dev-dependencies]
# bevy_panorbit_camera = "0.19.3"

[workspace.dependencies]
# this now depends on the bevy feature flags that bevy_mod_xr sets, fun!
bevy = { version = "0.15", default-features = false }
bevy_mod_openxr.git = "https://github.com/awtterpip/bevy_oxr"
bevy_mod_xr.git = "https://github.com/awtterpip/bevy_oxr"
bevy_xr_utils.git = "https://github.com/awtterpip/bevy_oxr"
