[package]
name = "bevy_sk"
version = "0.1.0"
edition = "2024"

[dependencies]
# this now depends on the bevy feature flags that bevy_mod_xr sets, fun!
bevy = { version = "0.16", default-features = false, features = [] }
bevy_mod_xr = "0.3"
bitflags = "2.6.0"

[dev-dependencies]
bevy_mod_openxr = "0.3"
bevy_xr_utils = "0.3"
bevy = { version = "0.16", default-features = true }
# bevy_panorbit_camera = "0.19.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
